@@ -6,6 +6,7 @@ Current Release
 - Made allow/deny flags required for dnsmkacl.
 - Made dnsmkzone require a zone name.
 - Made dnsrmhost require the target, fixed unittest.
+- Fixed @ targets
 
 2010-01-27 release-0.11
 - Fixed dnsmkacl warning with no arguments
