@@ -3,6 +3,8 @@ Current Release
 - Fixed RemoveRecord in core
 - Added new acl_ranges table in db.
 - Removed UpdateACL and added RemoveCIDRBlock
+- Made new RemovePTRRecord function
+- Fixed @ for other record functions
 
 2010-01-27 release-0.11
 - Fixed SOA incrementing problem.
